# exosim

./: .gitignore  CMakeLists.txt  ExoSimConfig.h.in  LICENSE.md  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/exosim/biomechanics/: ChJaw.h  ChLigament.h  ChMuscle.h
include/exosim/biomechanics/physics/: ChContactForceTorqueJawSMC.h  ChLinkLockPointSurface.h
include/exosim/biomechanics/utils/: ChEnumStringConverter.h  ChGmshMeshFileLoader.h  ChMuscleExcitation.h  ChUtilsJSON.h  utils.h
include/exosim/biomechanics/vis/: ChJawVSG.h  ChVisualJawSystemVSG.h  ChVisualShapeBiomechanics.h  ImPlotUtils.h
resources/blender/: LICENSE_MODELS.md
resources/blender/BlenderPython/jaw/: __init__.py  core.py  visualize_trajectory.py
resources/blender/jaw_1/: tmj_discs_imprints.blend
resources/blender/jaw_2/: README.md
resources/json/: README.md
resources/json/jaw_1/: fea.json  jaw.json  ligaments.json  muscles.json
resources/json/jaw_2/: jaw.json  ligaments.json  muscles_peck.json
resources/json/jaw_2/fea/: fea.json  jaw.json  muscles_millard.json
resources/json/jaw_2/optimization/: fea.json  jaw.json  ligaments.json  muscles_millard.json
resources/meshes/jaw_1/: README.md
resources/meshes/jaw_1/collision/: mandible_smooth_coll.1.vtk  mandible_smooth_coll.stl  skull_smooth_coll.stl
resources/meshes/jaw_1/fea/: tmj_disc.1.edge  tmj_disc.1.face  tmj_disc.1.smesh  tmj_disc.1.vtk  tmj_disc.stl  tmj_disc_left_fea.ele  tmj_disc_left_fea.node  tmj_disc_left_imprint.geo  tmj_disc_left_imprint.stl  tmj_disc_left_imprint_fea.msh  tmj_disc_left_imprint_fea.stl  tmj_disc_red.stl  tmj_disc_right_fea.msh  tmj_disc_right_hexa_fea.msh  tmj_disc_right_imprint.geo  tmj_disc_right_imprint.mtl  tmj_disc_right_imprint.stl  tmj_disc_right_imprint_fea.msh  tmj_disc_right_imprint_fea.stl
resources/meshes/jaw_1/visualization/: a.lua  hyoid_vis.1.vtk  hyoid_vis.stl
resources/meshes/jaw_2/: README.md
resources/meshes/jaw_2/collision/: mandible_smooth_coll.mtl  mandible_smooth_plane_coll.mtl  mandible_smooth_rigid_coll.mtl  mandible_smooth_rigid_plane_coll.mtl  maxilla_smooth_rigid_coll.mtl
resources/meshes/jaw_2/fea/: tmj_disc_left.fTetWild.msh  tmj_disc_right.fTetWild.msh
resources/meshes/jaw_2/visualization/: mandible_vis.mtl
scripts/install/: README.md  install_exosim.sh  install_pardiso_mkl_apt.sh
src/apps/: jaw_model.cpp
src/biomechanics/: CMakeLists.txt  ChJaw.cpp  ChLigament.cpp  ChMuscle.cpp  exosim_biomech_lib.pc.in
src/biomechanics/physics/: ChContactForceTorqueJawSMC.cpp  ChLinkLockPointSurface.cpp
src/biomechanics/utils/: ChGmshMeshFileLoader.cpp  ChUtilsJSON.cpp
src/biomechanics/vis/: ChJawVSG.cpp  ChVisualJawSystemVSG.cpp  ChVisualShapeBiomechanics.cpp
tests/: CMakeLists.txt
